--- a/.github/workflows/run_nginx.yml
+++ b/.github/workflows/run_nginx.yml
@@ -1,10 +1,10 @@
-name: nginx-server
-
 on:
   push:
     branches:
-      - main
-  job:
+      - master
+
+jobs:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -20,8 +20,10 @@ on:
           file: devops/nginx/dockerfile
           push: true
           tags: my-nginx:latest
-
+          build-args: |
+            NGINX_VERSION=1.21.6
+            NGINX_PORT=80
       - name: Run Nginx container
         run: |
-          docker run -d -p 80:80 my-nginx
-# k
+          docker run -d -p 80:80 my-nginx:latest
+          echo "Nginx is running on port 80"
